WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114085
--minimal build fails with error: control reaches end of non-void function
https://bugs.webkit.org/show_bug.cgi?id=114085
Summary
--minimal build fails with error: control reaches end of non-void function
Ed Bartosh
Reported
2013-04-06 02:26:40 PDT
./Tools/Scripts/build-webkit --efl --cmakeargs="-DSHARED_CORE=ON" --minimal fails with this error: /home/ed/git/wk/WebKit/Source/JavaScriptCore/interpreter/Interpreter.cpp: In function ‘unsigned int JSC::getBytecodeOffsetForCallFrame(JSC::CallFrame*)’: /home/ed/git/wk/WebKit/Source/JavaScriptCore/interpreter/Interpreter.cpp:580:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors make[2]: *** [Source/JavaScriptCore/CMakeFiles/javascriptcore_efl.dir/interpreter/Interpreter.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[1]: *** [Source/JavaScriptCore/CMakeFiles/javascriptcore_efl.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.31 KB, patch)
2013-04-06 03:13 PDT
,
Ed Bartosh
ggaren
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.47 KB, patch)
2013-04-06 11:34 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ed Bartosh
Comment 1
2013-04-06 03:13:36 PDT
Created
attachment 196727
[details]
Patch
Geoffrey Garen
Comment 2
2013-04-06 11:00:33 PDT
Comment on
attachment 196727
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-04-06 11:25:14 PDT
Comment on
attachment 196727
[details]
Patch Rejecting
attachment 196727
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 196727, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: e: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/JavaScriptCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/JavaScriptCore/interpreter/Interpreter.cpp Hunk #1 FAILED at 576. 1 out of 1 hunk FAILED -- saving rejects to file Source/JavaScriptCore/interpreter/Interpreter.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Geoffrey Garen']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-commit-queue.appspot.com/results/17524468
Ed Bartosh
Comment 4
2013-04-06 11:34:40 PDT
Created
attachment 196748
[details]
Patch Rebased. Please, review.
WebKit Commit Bot
Comment 5
2013-04-06 13:02:34 PDT
Comment on
attachment 196748
[details]
Patch Clearing flags on attachment: 196748 Committed
r147851
: <
http://trac.webkit.org/changeset/147851
>
WebKit Commit Bot
Comment 6
2013-04-06 13:02:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug