--minimal build fails with error: control reaches end of non-void function https://bugs.webkit.org/show_bug.cgi?id=114085

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-06
Reviewed by Oliver Hunt.

* interpreter/Interpreter.cpp: return 0 if JIT is not enabled
(JSC::getBytecodeOffsetForCallFrame):

Canonical link: https://commits.webkit.org/132480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147851 268f45cc-cd09-0410-ab3c-d52691b4dbfc